Reset DM form when closed, fix members scroller jump issue

--- a/app/assets/stylesheets/components/_members.scss
+++ b/app/assets/stylesheets/components/_members.scss
@@ -9,9 +9,12 @@
   overflow: hidden;
 }
 
+.members.scroller {
+  height: calc(100vh - 48px);
+}
+
 .members.scroller:hover {
   overflow-y: scroll;
-  height: calc(100vh - 48px);
 }
 
 .members h2 {
